force-app/main/default/objects/custom_create376__c/custom_create376__c.object-meta.xml
<CustomObject>
    <label>Custom created object376</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects376</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>