force-app/main/default/objects/custom_create376__c/fields/custom_create_376field631__c.field-meta.xml
<CustomField>
    <fullName>custom_create_376field631__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 376field631</label>
    <type>Checkbox</type>
</CustomField>